added database json implementaton

--- a/.gitignore
+++ b/.gitignore
@@ -34,12 +34,15 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+database.json
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
 node_modules/
 jspm_packages/
+files/
 
 # TypeScript v1 declaration files
 typings/
