--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "filesize": "^6.1.0",
     "uuid": "^8.2.0"
   },
   "devDependencies": {},
